Release 0.2.5

Release 0.2.4
- Added PDF::Annot::Markup, PDF::Annot::Popup,
  PDF:::Annot::ThreeD, PDF::Markup::Markup3D

Release 0.2.3
- Fix PDF 1.6+ Cross Reference Streams, broken in 0.2.2

Release 0.2.2
- Fix PDF::Shading::Function
- Added PDF::ICCProfile, PDF::Annot::Caret, PDF::Signature,
  PDF::Action::JavaScript

Release 0.2.1
- Added PDF::Action::GoToR - goto remote
- Added PDF::Action::Named - named action
- Added PDF::Image. Use for PDF::Page.Thumb(thumbnail-image) attribute
- Changed PDF::FontDescriptor from a class to a role
- Removed subclass PDF::OutputIntent::GTS_PDFX
- Fixed setup of Resources ProcSet array
- Improved page navigation in pdf-checker.p6

Release 0.2.0
- Simplifications to PDF::Class::Loader. Made PDF::CIDSystemInfo a role.
- Corrections, mostly based on pdf-checker --strict feedback, to:
  PDF::Font::CIDFont, PDF::Metadata::XML, PDF::Pages,
  PDF::ViewerPreferences, PDF::Field::Signature,
  PDF::OutputIntent::GTS_PDFX, PDF::Catalog, PDF::Encoding,
  PDF::Catalog
  
Release 0.1.9
- Development of PDF::NameTree, PDF::NumberTree, PDF::StructElem and PDF::FontFile
- Further development of PDF::Destination. Both explicit and named destinations.
- Added PDF::Catalog.Dests coercements
- Fixed PDF::Action coercements

Release 0.1.8
- Add classess:
  -- PDF::OCG (Optional Content Groups)
  -- PDF::OCMD (Optional Content Membership Dictionary)
  -- PDF::MCR (Marked Content Reference)
- Remove some trivial single-use subsets. Replace with 'where' clauses on
  entry attributes.
- Move t:Doc::* test classes from lib/ to t/

Release 0.1.7
- Adjust t/helloworld.t and t/pdf-xobject-form.t for PDF::Content 0.2.2

Release 0.1.6
- Added PDF::StructTreeRoot, PDF::NameTree
- Altered composition of PDF::Mask
- Fixed DeviceN Color load warnings

Release 0.1.5
Improvements from field testing of pdf-checker.p6:
- PDF::Outline, PDF::Outlines:
  -- fix coercements. Convert from classes to roles as /Type is optional.