@@ -20,6 +20,7 @@
     "PDF::Action::GoTo" : "lib/PDF/Action/GoTo.pm",
     "PDF::Action::GoToR" : "lib/PDF/Action/GoToR.pm",
     "PDF::Action::JavaScript" : "lib/PDF/Action/JavaScript.pm",
+    "PDF::Action::Launch" : "lib/PDF/Action/Launch.pm",
     "PDF::Action::Named" : "lib/PDF/Action/Named.pm",
     "PDF::Action::URI" : "lib/PDF/Action/URI.pm",
     "PDF::Annot" : "lib/PDF/Annot.pm",
@@ -59,6 +60,7 @@
     "PDF::Field::Choice" : "lib/PDF/Field/Choice.pm",
     "PDF::Field::Signature" : "lib/PDF/Field/Signature.pm",
     "PDF::Field::Text" : "lib/PDF/Field/Text.pm",
+    "PDF::Filespec" : "lib/PDF/Filespec.pm",
     "PDF::Font" : "lib/PDF/Font.pm",
     "PDF::Font::CIDFont" : "lib/PDF/Font/CIDFont.pm",
     "PDF::Font::CIDFontType0" : "lib/PDF/Font/CIDFontType0.pm",
