@@ -23,7 +23,7 @@ ok my PDF::Page $p2 = $pdf.page(2), 'pdf reload from json';
 
 my PDF::Page $p2-again;
 lives-ok {$p2-again = $pdf.delete-page(2)}, 'delete-page lives';
-ok $p2 === $p2-again, 'delete page returned';
+ok $p2 === $p2-again, 'deleted page returned';
 is $pdf.page-count, 1, 'pages after deletion';
 
 done-testing;
