@@ -1,4 +1,5 @@
 Release 0.2.5
+- Added PDF::Filespec, PDF::Action::Launch
 
 Release 0.2.4
 - Added PDF::Annot::Markup, PDF::Annot::Popup,
